--- a/frontend-web/news-app/src/app/core/posts/post-list/post-list.component.html
+++ b/frontend-web/news-app/src/app/core/posts/post-list/post-list.component.html
@@ -1,6 +1,6 @@
 <div class="md:container md:mx-auto container mx-auto mt-10">
   <div class="grid grid-cols-3 gap-6">
-    @for(post of posts; track post.title) {
+    @for(post of posts$ | async; track post.title) {
       <app-post-item [post]="post"></app-post-item>
     }
   </div>
