[US1] #2 Implemented authentication partially and added cors configurations

--- a/frontend-web/news-app/src/app/core/posts/post-item/post-item.component.html
+++ b/frontend-web/news-app/src/app/core/posts/post-item/post-item.component.html
@@ -1,5 +1,5 @@
 <div [ngClass]="{'border-2 border-yellow-500': post.state === 'SUBMITTED'}" class="max-w-md mx-auto bg-white rounded-xl overflow-hidden shadow-md">
-  <img class="w-full h-36 object-cover" src="ACADEMIC.png" alt="Card image">
+  <img class="w-full h-36 object-cover" src="placeholder.png" alt="Card image">
 
   <div class="p-6">
     <h2 class="font-bold text-xl mb-2">{{post.title}}</h2>
