--- a/frontend-web/news-app/src/app/core/posts/post-list/post-list.component.html
+++ b/frontend-web/news-app/src/app/core/posts/post-list/post-list.component.html
@@ -1,3 +1,4 @@
+<h1>Posts</h1>
 <div class="md:container md:mx-auto container mx-auto mt-10">
   <div class="grid grid-cols-3 gap-6">
     @for(post of posts$ | async; track post.title) {
@@ -5,5 +6,3 @@
     }
   </div>
 </div>
-
-<app-add-post (addPost)="processAdd($event)"></app-add-post>
