[US1] #2 Fixed fetch problems to backend

--- a/frontend-web/news-app/src/app/core/navbar/navbar.component.html
+++ b/frontend-web/news-app/src/app/core/navbar/navbar.component.html
@@ -34,8 +34,8 @@
         <div class="hidden sm:ml-6 sm:block">
           <div class="flex space-x-4">
             <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-            <a [routerLink]="['/posts']" routerLinkActive="md:text-blue-700 bg-gray-900 text-red"  class="rounded-md px-3 py-2 text-sm font-medium text-white" aria-current="page">Posts</a>
-            <a [routerLink]="['/addPost']" routerLinkActive="md:text-blue-700" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Add post</a>
+            <a [routerLink]="['/posts']" routerLinkActive="bg-green-900"  class="rounded-md px-3 py-2 text-sm font-medium text-white" aria-current="page">Posts</a>
+            <a [routerLink]="['/addPost']" routerLinkActive="bg-green-900" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Add post</a>
           </div>
         </div>
       </div>
