--- a/frontend-web/news-app/src/styles.css
+++ b/frontend-web/news-app/src/styles.css
@@ -2,4 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-
+body {
+  background-image: url('../public/pxl_background.png');
+  background-size: cover;
+}
