--- a/frontend-web/news-app/src/app/core/posts/post-item/post-item.component.html
+++ b/frontend-web/news-app/src/app/core/posts/post-item/post-item.component.html
@@ -1,7 +1,8 @@
 <div [ngClass]="{'border-2 border-yellow-500': post.state === 'SUBMITTED'}" class="max-w-md mx-auto bg-white rounded-xl overflow-hidden shadow-md">
   <img class="w-full h-36 object-cover" [src]="'post-backgrounds/' + post.category + '.png'" alt="Card image">
   <div class="p-6">
-    <h2 class="font-bold text-xl my-auto mb-2 min-h-40">{{post.title}}</h2>
+    <p class="text-gray-400 text-sm my-auto mb-1">{{transformDate(post.createdAt)}}</p>
+    <h1 class="font-bold text-xl my-auto mb-2 min-h-40">{{post.title}}</h1>
     <button (click)="openPost()" class="bg-pxlGreen w-full text-white font-bold py-2 px-2 rounded bg-opacity-50 cursor-not-allowed">
       Read
     </button>
