--- a/frontend-web/news-app/src/app/core/posts/add-post/add-post.component.html
+++ b/frontend-web/news-app/src/app/core/posts/add-post/add-post.component.html
@@ -1,34 +1,41 @@
-<div class="container mx-auto mt-5">
-  <h2 class="text-xl mb-3">Add Post</h2>
+<div class="container mx-auto mt-5 px-2" >
+  <h1 class="text-2xl font-bold mb-8">Create new post</h1>
   <form [formGroup]="postForm" (ngSubmit)="onSubmit()">
     <div class="mb-4">
-      <label for="title" class="block text-gray-700 text-sm font-bold mb-2">Title:</label>
+      <label for="title" class="block text-gray-700 text-sm mb-2">Title*</label>
       <input type="text" id="title" formControlName="title" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
       @if (postForm.get('title')?.touched && postForm.get('title')?.hasError('required')){
         <div class="text-red-500 text-sm mt-1">Title is required</div>
       }
-    </div>
-    <div class="mb-4">
-      <label for="content" class="block text-gray-700 text-sm font-bold mb-2">Content:</label>
-      <input type="text" id="content" formControlName="content" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
-      @if (postForm.get('content')?.touched && postForm.get('content')?.hasError('required')){
-        <div class="text-red-500 text-sm mt-1">Title is required</div>
+      @if (postForm.get('title')?.touched && postForm.get('title')?.hasError('maxlength')){
+        <div class="text-red-500 text-sm mt-1">Title cannot be more than 130 characters</div>
       }
     </div>
     <div class="mb-4">
-      <label for="category" class="block text-gray-700 text-sm font-bold mb-2">Category:</label>
+      <label for="content" class="block text-gray-700 text-sm mb-2">Content*</label>
+      <textarea name="content" id="content" formControlName="content" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"></textarea>
+      @if (postForm.get('content')?.touched && postForm.get('content')?.hasError('required')){
+        <div class="text-red-500 text-sm mt-1">Content is required</div>
+      }
+    </div>
+
+    <div class="mb-4">
+      <label for="category" class="block text-gray-700 text-sm mb-2">Category*</label>
       <select formControlName="category" id="category" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
-        <option value="CAMPUS">Campus</option>
-        <option value="ACADEMIC">Academic</option>
-        <option value="STUDENT">Student</option>
+        @for(category of categories$ | async; track category) {
+          <option [value]="category">{{toPascalCasing(category)}}</option>
+        }
       </select>
       @if(postForm.get('category')?.touched && postForm.get('category')?.hasError('required')){
         <div class="text-red-500 text-sm mt-1">Category is required</div>
       }
     </div>
-    <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-            [ngClass]="{'bg-gray-500 hover:bg-gray-500': !postForm.valid}" [disabled]="!postForm.valid">
+    <button type="submit" class="bg-pxlGreen hover:bg-black text-white font-bold py-2 px-4 mb-2 rounded focus:outline-none focus:shadow-outline"
+            [ngClass]="{'hover:bg-pxlGreen cursor-not-allowed bg-opacity-50 hover:bg-opacity-50': !postForm.valid}" [disabled]="!postForm.valid">
       Save
+    </button>
+    <button type="button" class=" text-black hover:text-gray-500 font-bold py-2 px-4 mb-2 rounded focus:outline-none focus:shadow-outline">
+      Cancel
     </button>
   </form>
 </div>
