[US1] #2 Updated navbar component

--- a/frontend-web/news-app/src/app/core/navbar/navbar.component.html
+++ b/frontend-web/news-app/src/app/core/navbar/navbar.component.html
@@ -3,9 +3,8 @@
     <div class="relative flex h-16 items-center justify-between">
       <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
         <!-- Mobile menu button-->
-        <button type="button" class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white" aria-controls="mobile-menu" aria-expanded="false">
+        <button type="button" class="relative inline-flex items-center justify-center rounded-md p-2 text-white hover:text-pxlGreen focus:outline-none focus:text-pxlGreen" aria-controls="mobile-menu" aria-expanded="false">
           <span class="absolute -inset-0.5"></span>
-          <span class="sr-only">Open main menu</span>
           <!--
             Icon when menu is closed.
 
@@ -26,23 +25,21 @@
       </div>
       <div class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start">
         <div class="flex shrink-0 items-center">
-          <img class="h-8 w-auto rounded-full border-white border-2" src="pxl_logo.png" alt="pxl logo">
+          <img class="rounded-full border-white border-2" ngSrc="pxl_logo.png" height="32" width="32" alt="pxl logo">
           <span class="self-center text-xl font-bold whitespace-nowrap ml-2 text-white">
       News</span>
         </div>
 
         <div class="hidden sm:ml-6 sm:block">
           <div class="flex space-x-4">
-            <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-            <a [routerLink]="['/posts']" routerLinkActive="bg-green-900"  class="rounded-md px-3 py-2 text-sm font-medium text-white" aria-current="page">Posts</a>
-            <a [routerLink]="['/addPost']" routerLinkActive="bg-green-900" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Add post</a>
+            <a [routerLink]="['/posts']" routerLinkActive="border-b-2 border-b-pxlGreen"  class="px-3 py-2 text-sm font-medium text-white hover:text-gray-400">Posts</a>
+            <a [routerLink]="['/addPost']" routerLinkActive="border-b-2 border-b-pxlGreen" class="px-3 py-2 text-sm font-medium text-white hover:text-gray-400">Add post</a>
           </div>
         </div>
       </div>
       <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
-        <button type="button" class="relative rounded-full bg-gray-800 p-1 text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800">
+        <button type="button" class="hidden relative rounded-full bg-gray-800 p-1 text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800">
           <span class="absolute -inset-1.5"></span>
-          <span class="sr-only">View notifications</span>
           <svg class="size-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon">
             <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
           </svg>
@@ -51,11 +48,17 @@
         <!-- Profile dropdown -->
         <div class="relative ml-3">
           <div>
-            <button type="button" class="relative flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800" id="user-menu-button">
+              @if (true){
+                <button (click)="login()"  type="button" class="relative flex bg-pxlGreen hover:bg-pxlGreenH text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" id="login-button">
+                  Log in
+                </button>
+            }
+            @else{
+              <button type="button" class="relative flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800" id="user-menu-button">
               <span class="absolute -inset-1.5"></span>
-              <span class="sr-only">Open user menu</span>
-              <img class="size-8 rounded-full" src="user.png" alt="">
-            </button>
+              <img class=" rounded-full" ngSrc="user.png" alt="default user profile" width="32" height="32">
+              </button>
+            }
           </div>
         </div>
       </div>
@@ -63,7 +66,7 @@
   </div>
 
 <!--   Mobile menu, show/hide based on menu state.-->
-    <div class="sm:hidden" id="mobile-menu">
+    <div class="hidden" id="mobile-menu">
       <div class="space-y-1 px-2 pb-3 pt-2">
         <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
         <a href="#" class="block rounded-md bg-gray-900 px-3 py-2 text-base font-medium text-white" aria-current="page">Dashboard</a>
