--- a/frontend-web/news-app/src/app/core/posts/add-post/add-post.component.html
+++ b/frontend-web/news-app/src/app/core/posts/add-post/add-post.component.html
@@ -21,7 +21,7 @@
 
     <div class="mb-4">
       <label for="category" class="block text-gray-700 text-sm mb-2">Category*</label>
-      <select formControlName="category" id="category" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+      <select formControlName="category" id="category" class="shadow appearance-none border w-full py-2 px-3 text-gray-700 leading-tight rounded focus:outline-none focus:shadow-outline">
         @for(category of categories$ | async; track category) {
           <option [value]="category">{{toPascalCasing(category)}}</option>
         }
@@ -30,11 +30,11 @@
         <div class="text-red-500 text-sm mt-1">Category is required</div>
       }
     </div>
-    <button type="submit" class="bg-pxlGreen hover:bg-black text-white font-bold py-2 px-4 mb-2 rounded focus:outline-none focus:shadow-outline"
-            [ngClass]="{'hover:bg-pxlGreen cursor-not-allowed bg-opacity-50 hover:bg-opacity-50': !postForm.valid}" [disabled]="!postForm.valid">
+    <button type="submit" class="bg-pxlGreen hover:bg-pxlGreenH text-white font-bold py-2 px-4 mb-2 rounded focus:outline-none focus:shadow-outline"
+            [ngClass]="{'opacity-50 hover:bg-pxlGreen hover:opacity-50 cursor-not-allowed': !postForm.valid}" [disabled]="!postForm.valid">
       Save
     </button>
-    <button type="button" class=" text-black hover:text-gray-500 font-bold py-2 px-4 mb-2 rounded focus:outline-none focus:shadow-outline">
+    <button type="button" class=" text-black hover:text-pxlGreen font-bold py-2 px-4 mb-2 focus:outline-none focus:shadow-outline">
       Cancel
     </button>
   </form>
