[US1] #2 Implemented authentication

--- a/frontend-web/news-app/src/app/core/navbar/navbar.component.html
+++ b/frontend-web/news-app/src/app/core/navbar/navbar.component.html
@@ -32,34 +32,49 @@
 
         <div class="hidden sm:ml-6 sm:block">
           <div class="flex space-x-4">
-            <a [routerLink]="['/posts']" routerLinkActive="border-b-2 border-b-pxlGreen"  class="px-3 py-2 text-sm font-medium text-white hover:text-gray-400">Posts</a>
-            <a [routerLink]="['/addPost']" routerLinkActive="border-b-2 border-b-pxlGreen" class="px-3 py-2 text-sm font-medium text-white hover:text-gray-400">Add post</a>
+            <a [routerLink]="['/home']" routerLinkActive="border-b-2 border-b-pxlGreen"  class="px-3 py-2 text-sm font-medium text-white hover:text-pxlGreen">Home</a>
+            <a [routerLink]="['/posts']" routerLinkActive="border-b-2 border-b-pxlGreen"  class="px-3 py-2 text-sm font-medium text-white hover:text-pxlGreen">Posts</a>
           </div>
         </div>
       </div>
+
+
       <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
-        <button type="button" class="hidden relative rounded-full bg-gray-800 p-1 text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800">
-          <span class="absolute -inset-1.5"></span>
-          <svg class="size-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
-          </svg>
-        </button>
+        @if (localStorage.getItem('userId') != null){
+          <button (click)="addPost()"  type="button" class="relative ml-3 flex bg-pxlGreen hover:bg-pxlGreenH text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+            AddPost
+          </button>
+          <button type="button" class="hidden relative ml-3  rounded-full bg-pxlGreen p-1 text-white hover:bg-pxlGreenH">
+            <span class="absolute -inset-1.5"></span>
+            <svg class="size-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M14.857 17.082a23.848 23.848 0 0 0 5.454-1.31A8.967 8.967 0 0 1 18 9.75V9A6 6 0 0 0 6 9v.75a8.967 8.967 0 0 1-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 0 1-5.714 0m5.714 0a3 3 0 1 1-5.714 0" />
+            </svg>
+          </button>
+        }
 
         <!-- Profile dropdown -->
         <div class="relative ml-3">
           <div>
-              @if (true){
-                <button (click)="login()"  type="button" class="relative flex bg-pxlGreen hover:bg-pxlGreenH text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" id="login-button">
-                  Log in
+              @if (localStorage.getItem('userId') == null){
+                <button (click)="login()"  type="button" class="relative flex bg-pxlGreen hover:bg-pxlGreenH text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+                  Sign in
                 </button>
             }
             @else{
-              <button type="button" class="relative flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800" id="user-menu-button">
+              <button (click)="userMenu()" class="relative flex rounded-full" id="user-menu-button">
               <span class="absolute -inset-1.5"></span>
-              <img class=" rounded-full" ngSrc="user.png" alt="default user profile" width="32" height="32">
+              <img class="rounded-full" ngSrc="user.png" alt="default user profile" width="32" height="32">
               </button>
             }
           </div>
+          @if (localStorage.getItem('userId') != null){
+            <div [hidden]="hiddenUserMenu" class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black/5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
+              <!-- Active: "bg-gray-100 outline-none", Not Active: "" f3f4f6 -->
+              <div class="block px-4 py-2 text-sm text-black border-b-2 border-b-gray-100">{{localStorage.getItem('userFullName')}}</div>
+              <a href="/myPosts" class="block px-4 py-2 text-sm text-black hover:bg-gray-100" role="menuitem" tabindex="-1" id="user-menu-item-0">My posts</a>
+              <a (click)="logout()" class="block px-4 py-2 text-sm text-black hover:bg-gray-100" role="menuitem" tabindex="-1" id="user-menu-item-2">Sign out</a>
+            </div>
+          }
         </div>
       </div>
     </div>
