--- a/frontend-web/news-app/src/app/core/login/login.component.html
+++ b/frontend-web/news-app/src/app/core/login/login.component.html
@@ -1,38 +1,36 @@
-<!--<div class="container mx-auto mt-5">-->
-<!--  <h2 class="text-xl mb-3">Add Post</h2>-->
-<!--  <form [formGroup]="postForm" (ngSubmit)="onSubmit()">-->
-<!--    <div class="mb-4">-->
-<!--      <label for="title" class="block text-gray-700 text-sm font-bold mb-2">Title:</label>-->
-<!--      <input type="text" id="title" formControlName="title" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">-->
-<!--      @if (postForm.get('title')?.touched && postForm.get('title')?.hasError('required')){-->
-<!--        <div class="text-red-500 text-sm mt-1">Title is required</div>-->
-<!--      }-->
-<!--    </div>-->
-<!--    <div class="mb-4">-->
-<!--      <label for="content" class="block text-gray-700 text-sm font-bold mb-2">Content:</label>-->
-<!--      <textarea name="content" id="content" formControlName="content" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"></textarea>-->
-<!--      @if (postForm.get('content')?.touched && postForm.get('content')?.hasError('required')){-->
-<!--        <div class="text-red-500 text-sm mt-1">Content is required</div>-->
-<!--      }-->
-<!--    </div>-->
+<div class="flex min-h-full flex-col justify-center px-6 py-12 lg:px-8">
+  <div class="sm:mx-auto sm:w-full sm:max-w-sm">
+    <h1 class="text-3xl font-bold mb-3 mt-10 text-center text-black">Sign in to your account</h1>
+  </div>
 
-<!--    <div class="mb-4">-->
-<!--      <label for="category" class="block text-gray-700 text-sm font-bold mb-2">Category:</label>-->
-<!--      <select formControlName="category" id="category" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">-->
-<!--        <option value="CAMPUS">Campus</option>-->
-<!--        <option value="ACADEMIC">Academic</option>-->
-<!--        <option value="STUDENT">Student</option>-->
-<!--      </select>-->
-<!--      @if(postForm.get('category')?.touched && postForm.get('category')?.hasError('required')){-->
-<!--        <div class="text-red-500 text-sm mt-1">Category is required</div>-->
-<!--      }-->
-<!--    </div>-->
-<!--    <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"-->
-<!--            [ngClass]="{'bg-gray-500 hover:bg-gray-500': !postForm.valid}" [disabled]="!postForm.valid">-->
-<!--      Save-->
-<!--    </button>-->
-<!--  </form>-->
-<!--</div>-->
-
-
-<h1>LOGIN PAGE</h1>
+  <div class="mt-10 sm:mx-auto sm:w-full sm:max-w-sm">
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+      <div class="mb-4">
+        <label for="username" class="block text-sm/6 font-medium text-gray-900">Username</label>
+        <div class="mt-2"><input type="text" id="username" formControlName="username" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+          @if (loginForm.get('username')?.touched && loginForm.get('username')?.hasError('required')){
+            <div class="text-red-500 text-sm mt-1">Username is required</div>
+          }
+        </div>
+      </div>
+      <div class="mb-4">
+        <label for="password" class="block text-sm/6 font-medium text-gray-900">Password</label>
+        <div class="mt-2">
+          <input type="password" id="password" formControlName="password" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+          @if (loginForm.get('password')?.touched && loginForm.get('password')?.hasError('required')){
+            <div class="text-red-500 text-sm mt-1">Password is required</div>
+          }
+        </div>
+      </div>
+      <button type="submit" class="flex w-full justify-center bg-pxlGreen hover:bg-pxlGreenH text-white font-bold py-2 px-4 mb-2 rounded">
+        Sign in
+      </button>
+      @if (validLogin){
+        <div class="text-red-500 text-sm mt-1">Username and/or password is incorrect</div>
+      }
+      @if (validLoginForm){
+        <div class="text-red-500 text-sm mt-1">Username and password is required</div>
+      }
+    </form>
+  </div>
+</div>
