[US1] #2 Fixed Docker for frontend

--- a/frontend-web/news-app/src/app/core/home/home.component.html
+++ b/frontend-web/news-app/src/app/core/home/home.component.html
@@ -9,7 +9,7 @@
         <a [routerLink]="['/login']"  class="text-sm font-semibold text-black hover:text-pxlGreen">
           Sign in
           <span aria-hidden="true">→</span></a>
-      } @else {
+      } @else if (localStorage.getItem('userRole') === 'editor'){
         <a [routerLink]="['/myPosts']"  class="text-sm font-semibold text-black hover:text-pxlGreen">
           Go to my posts
           <span aria-hidden="true">→</span></a>
