--- a/frontend-web/news-app/src/app/core/page-not-found/page-not-found.component.html
+++ b/frontend-web/news-app/src/app/core/page-not-found/page-not-found.component.html
@@ -4,7 +4,7 @@
     <h1 class="mt-4 text-balance text-5xl font-semibold tracking-tight text-black sm:text-7xl">Page not found</h1>
     <p class="mt-6 text-pretty text-lg font-medium text-gray-500 sm:text-xl/8">Sorry, we couldn’t find the page you’re looking for.</p>
     <div class="mt-10 flex items-center justify-center gap-x-6">
-      <a [routerLink]="['/posts']" class="rounded bg-pxlGreen px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-pxlGreenH">Go back home</a>
+      <a [routerLink]="['/']" class="rounded bg-pxlGreen px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-pxlGreenH">Go back home</a>
     </div>
   </div>
 </div>
