--- a/frontend-web/news-app/src/app/core/posts/post-detail/post-detail.component.html
+++ b/frontend-web/news-app/src/app/core/posts/post-detail/post-detail.component.html
@@ -7,9 +7,26 @@
       <div class="font-bold text-xl mb-2">{{post.title}}</div>
       <p class="text-gray-500 font-medium text-sm my-auto mb-5">By {{authenticationService.getUserById(post.userId)?.fullName}} | {{postService.transformDate(post.createdAt)}}
         <span class="inline-flex items-center rounded bg-pxlGreen bg-opacity-20 px-2 py-1 text-sm font-medium text-pxlGreen ring-1 ring-inset ring-pxlGreen ml-2">{{postService.toPascalCasing(post.category)}}</span>
+        @if (post.state !== 'PUBLISHED') {
+          <span class="inline-flex items-center rounded bg-opacity-20 px-2 py-1 text-sm font-medium ring-1 ring-inset ml-2"
+                [ngClass]="{'bg-gray-500 text-gray-500 ring-gray-500': post.state === 'DRAFTED',
+                'bg-blue-500 text-blue-500 ring-blue-500': post.state === 'SUBMITTED',
+                'bg-pxlGreen text-pxlGreen ring-pxlGreen': post.state === 'APPROVED',
+                'bg-red-500 text-red-500 ring-red-500': post.state === 'REJECTED'}"
+          >{{postService.toPascalCasing(post.state)}}</span>
+        }
       </p>
       <p class="text-black text-justify mb-8">{{post.content}}</p>
-      <button [routerLink]="['/post']" routerLinkActive="router-link-active" class="w-full text-black font-bold py-2 px-2 rounded hover:text-pxlGreen">Back</button>
-     </div>
+
+      @if (localStorage.getItem('userId') == post.userId.toString()) {
+        @if (post.state === 'DRAFTED') {
+          <div class="grid grid-cols-2 gap-2">
+            <button [routerLink]="['/editPost/',post.id]" class="bg-pxlGreen text-white font-bold w-full py-2 px-2 rounded hover:bg-pxlGreenH mb-2">Edit</button>
+            <button class="bg-pxlGreen text-white font-bold w-full py-2 px-2 rounded hover:bg-pxlGreenH mb-2" (click)="submit()">Submit</button>
+          </div>
+        }
+      }
+      <button routerLink=".." class="w-full text-black font-bold py-2 px-2 rounded hover:text-pxlGreen">Back</button>
+    </div>
   </div>
 }
