--- a/frontend-web/news-app/src/app/core/posts/filter/filter.component.html
+++ b/frontend-web/news-app/src/app/core/posts/filter/filter.component.html
@@ -1,11 +1,11 @@
-<div class="container mx-auto">
+<div class="container mx-auto p-2">
   <div class="flex items-center">
     <form #filterForm="ngForm" (ngSubmit)="onSubmit(filterForm)">
-      <div class="flex items-center">
-        <input type="text" class="px-4 py-2 mr-2" placeholder="Search by Name" name="name" [(ngModel)]="filter.name">
-        <input type="text" class="px-4 py-2 mr-2" placeholder="Search by City" name="city" [(ngModel)]="filter.city">
-        <input type="text" class="px-4 py-2" placeholder="Search by VAT" name="vat" [(ngModel)]="filter.vat">
-        <button type="submit" class="ml-2 bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-lg">Search</button>
+      <div class="flex items-center p-2">
+        <input type="text" class="px-4 py-2 mr-2 border-2 rounded shadow" placeholder="Search by content" name="content" [(ngModel)]="filter.content">
+        <input type="text" class="px-4 py-2 mr-2 border-2 rounded shadow" placeholder="Search by author" name="author" [(ngModel)]="filter.author">
+        <input type="text" class="px-4 py-2 border-2 rounded shadow" placeholder="Search by category" name="category" [(ngModel)]="filter.category">
+        <button type="submit" class="ml-2 bg-pxlGreen hover:bg-pxlGreenH text-white font-bold py-2 px-4 rounded">Search</button>
       </div>
     </form>
   </div>
