--- a/frontend-web/news-app/src/app/core/posts/post-list/post-list.component.html
+++ b/frontend-web/news-app/src/app/core/posts/post-list/post-list.component.html
@@ -1,6 +1,8 @@
-<div class="md:container md:mx-auto container mx-auto my-10 px-2">
+<app-filter (filterChanged)="handleFilter($event)"></app-filter>
+
+<div class="md:container md:mx-auto container mx-auto mb-10 px-2">
   <div class="grid grid-cols-3 gap-6">
-    @for(post of posts$ | async; track post.id) {
+    @for(post of filteredPosts$ | async; track post.id) {
       <app-post-item [post]="post"></app-post-item>
     }
   </div>
