--- a/frontend-web/news-app/src/app/core/posts/edit-post/edit-post.component.html
+++ b/frontend-web/news-app/src/app/core/posts/edit-post/edit-post.component.html
@@ -1,6 +1,6 @@
 @if (post$ | async; as post){
   <div class="container mx-auto mt-5 px-2" >
-    <h1 class="text-2xl font-bold mb-8">Create new post</h1>
+    <h1 class="text-2xl font-bold mb-8">Edit post</h1>
     <form [formGroup]="postForm" (ngSubmit)="onSubmit()">
       <div class="mb-4">
         <label class="block text-sm/6 font-medium text-gray-900 mb-1">Title</label>
@@ -34,6 +34,7 @@
       <button (click)="cancel()" class=" text-black hover:text-pxlGreen font-bold py-2 px-4 mb-2 focus:outline-none focus:shadow-outline">
         Cancel
       </button>
+      <div id="errorMessage" class="text-red-500 text-sm mt-1"></div>
     </form>
   </div>
 }
