--- a/frontend-web/news-app/src/app/core/posts/filter/filter.component.html
+++ b/frontend-web/news-app/src/app/core/posts/filter/filter.component.html
@@ -3,7 +3,9 @@
     <form #filterForm="ngForm" (ngSubmit)="onSubmit(filterForm)">
       <div class="flex items-center p-2">
         <input type="text" class="px-4 py-2 mr-2 border-2 rounded shadow" placeholder="Search by content" name="content" [(ngModel)]="filter.content">
+        @if (!mine) {
         <input type="text" class="px-4 py-2 mr-2 border-2 rounded shadow" placeholder="Search by author" name="author" [(ngModel)]="filter.author">
+        }
         <input type="text" class="px-4 py-2 border-2 rounded shadow" placeholder="Search by category" name="category" [(ngModel)]="filter.category">
         <button type="submit" class="ml-2 bg-pxlGreen hover:bg-pxlGreenH text-white font-bold py-2 px-4 rounded">Search</button>
       </div>
