Updated styling and fixed invalid urls

--- a/frontend-web/news-app/src/app/core/navbar/navbar.component.html
+++ b/frontend-web/news-app/src/app/core/navbar/navbar.component.html
@@ -2,22 +2,12 @@
   <div class="mx-auto max-w-8xl px-2 sm:px-6 lg:px-8">
     <div class="relative flex h-16 items-center justify-between">
       <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
-        <!-- Mobile menu button-->
+
         <button type="button" class="relative inline-flex items-center justify-center rounded-md p-2 text-white hover:text-pxlGreen focus:outline-none focus:text-pxlGreen" aria-controls="mobile-menu" aria-expanded="false">
           <span class="absolute -inset-0.5"></span>
-          <!--
-            Icon when menu is closed.
-
-            Menu open: "hidden", Menu closed: "block"
-          -->
           <svg class="block size-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
           </svg>
-          <!--
-            Icon when menu is open.
-
-            Menu open: "block", Menu closed: "hidden"
-          -->
           <svg class="hidden size-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon">
             <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
           </svg>
@@ -34,6 +24,9 @@
           <div class="flex space-x-4">
             <a [routerLink]="['/home']" routerLinkActive="border-b-2 border-b-pxlGreen"  class="px-3 py-2 text-sm font-medium text-white hover:text-pxlGreen">Home</a>
             <a [routerLink]="['/post']" routerLinkActive="border-b-2 border-b-pxlGreen"  class="px-3 py-2 text-sm font-medium text-white hover:text-pxlGreen">Posts</a>
+            @if (localStorage.getItem('userId') != null){
+              <a [routerLink]="['/myPost']" routerLinkActive="border-b-2 border-b-pxlGreen"  class="px-3 py-2 text-sm font-medium text-white hover:text-pxlGreen">My posts</a>
+            }
           </div>
         </div>
       </div>
@@ -41,9 +34,6 @@
 
       <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
         @if (localStorage.getItem('userId') != null && localStorage.getItem('userRole') === 'editor'){
-          <button (click)="addPost()"  type="button" class="relative ml-3 flex bg-pxlGreen hover:bg-pxlGreenH text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
-            AddPost
-          </button>
           <button type="button" class="hidden relative ml-3  rounded-full bg-pxlGreen p-1 text-white hover:bg-pxlGreenH">
             <span class="absolute -inset-1.5"></span>
             <svg class="size-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon">
@@ -52,7 +42,6 @@
           </button>
         }
 
-        <!-- Profile dropdown -->
         <div class="relative ml-3">
           <div>
               @if (localStorage.getItem('userId') == null){
@@ -63,18 +52,17 @@
             @else{
               <button (click)="userMenu()" class="relative flex rounded-full" id="user-menu-button">
               <span class="absolute -inset-1.5"></span>
-              <img class="rounded-full" ngSrc="user.png" alt="default user profile" width="32" height="32">
+                <div>
+                  <img class="inline-block rounded-full" ngSrc="user.png" alt="default user profile" width="32" height="32">
+                  <span class="text-sm font-medium text-white inline-block mx-2 align-middle">{{ authenticationService.getUserById(localStorage.getItem('userId'))?.fullName }}</span>
+                </div>
+
               </button>
             }
           </div>
           @if (localStorage.getItem('userId') != null){
             <div [hidden]="hiddenUserMenu" class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black/5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
-              <!-- Active: "bg-gray-100 outline-none", Not Active: "" f3f4f6 -->
-              <div class="block px-4 py-2 text-sm text-black border-b-2 border-b-gray-100">{{localStorage.getItem('userFullName')}}</div>
-              @if (localStorage.getItem('userRole') === 'editor'){
-                <a href="/post/mine" class="block px-4 py-2 text-sm text-black hover:bg-gray-100" role="menuitem" tabindex="-1" id="user-menu-item-0">My posts</a>
-              }
-                <a (click)="logout()" class="block px-4 py-2 text-sm text-black hover:bg-gray-100" role="menuitem" tabindex="-1" id="user-menu-item-2">Sign out</a>
+              <a (click)="logout()" class="block px-4 py-2 text-sm text-black hover:bg-gray-100" role="menuitem" tabindex="-1" id="user-menu-item-2">Sign out</a>
             </div>
           }
         </div>
@@ -82,10 +70,8 @@
     </div>
   </div>
 
-<!--   Mobile menu, show/hide based on menu state.-->
     <div class="hidden" id="mobile-menu">
       <div class="space-y-1 px-2 pb-3 pt-2">
-        <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
         <a href="#" class="block rounded-md bg-gray-900 px-3 py-2 text-base font-medium text-white" aria-current="page">Dashboard</a>
         <a href="#" class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Team</a>
         <a href="#" class="block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Projects</a>
