--- a/frontend-web/news-app/src/app/core/posts/post-list/post-list.component.html
+++ b/frontend-web/news-app/src/app/core/posts/post-list/post-list.component.html
@@ -10,7 +10,7 @@
       </h1>
       <app-filter class="inline-block" (filterChanged)="handleFilter($event)" [mine]="mine"></app-filter>
     </div>
-  <div class="grid grid-cols-3">
+  <div class="grid grid-cols-3 gap-6">
     @for(post of posts$ | async; track post.id) {
       <app-post-item [post]="post"></app-post-item>
     }
