--- a/frontend-web/news-app/src/app/core/posts/post-detail/post-detail.component.html
+++ b/frontend-web/news-app/src/app/core/posts/post-detail/post-detail.component.html
@@ -21,9 +21,10 @@
       @if (localStorage.getItem('userId') == post.userId.toString()) {
         @if (post.state === 'DRAFTED') {
           <div class="grid grid-cols-2 gap-2">
+            <button class="bg-pxlGreen text-white font-bold w-full py-2 px-2 rounded hover:bg-pxlGreenH mb-2" (click)="submitPost()">Submit</button>
             <button [routerLink]="['/editPost/',post.id]" class="bg-pxlGreen text-white font-bold w-full py-2 px-2 rounded hover:bg-pxlGreenH mb-2">Edit</button>
-            <button class="bg-pxlGreen text-white font-bold w-full py-2 px-2 rounded hover:bg-pxlGreenH mb-2" (click)="submit()">Submit</button>
           </div>
+          <div id="errorMessage" class="text-red-500 text-sm mt-1"></div>
         }
       }
       <button routerLink=".." class="w-full text-black font-bold py-2 px-2 rounded hover:text-pxlGreen">Back</button>
