--- a/frontend-web/news-app/src/app/core/navbar/navbar.component.html
+++ b/frontend-web/news-app/src/app/core/navbar/navbar.component.html
@@ -24,7 +24,7 @@
           <div class="flex space-x-4">
             <a [routerLink]="['/home']" routerLinkActive="border-b-2 border-b-pxlGreen"  class="px-3 py-2 text-sm font-medium text-white hover:text-pxlGreen">Home</a>
             <a [routerLink]="['/post']" routerLinkActive="border-b-2 border-b-pxlGreen"  class="px-3 py-2 text-sm font-medium text-white hover:text-pxlGreen">Posts</a>
-            @if (localStorage.getItem('userId') != null){
+            @if (localStorage.getItem('userRole') === 'editor'){
               <a [routerLink]="['/myPost']" routerLinkActive="border-b-2 border-b-pxlGreen"  class="px-3 py-2 text-sm font-medium text-white hover:text-pxlGreen">My posts</a>
             }
           </div>
@@ -33,7 +33,7 @@
 
 
       <div class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0">
-        @if (localStorage.getItem('userId') != null && localStorage.getItem('userRole') === 'editor'){
+        @if (localStorage.getItem('userRole') === 'editor'){
           <button type="button" class="hidden relative ml-3  rounded-full bg-pxlGreen p-1 text-white hover:bg-pxlGreenH">
             <span class="absolute -inset-1.5"></span>
             <svg class="size-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon">
@@ -44,8 +44,8 @@
 
         <div class="relative ml-3">
           <div>
-              @if (localStorage.getItem('userId') == null){
-                <button (click)="login()"  type="button" class="relative flex bg-pxlGreen hover:bg-pxlGreenH text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+            @if (localStorage.getItem('userId') == null){
+                <button (click)="login()"  type="button" class="relative cover flex bg-pxlGreen hover:bg-pxlGreenH text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
                   Sign in
                 </button>
             }
@@ -53,18 +53,16 @@
               <button (click)="userMenu()" class="relative flex rounded-full" id="user-menu-button">
               <span class="absolute -inset-1.5"></span>
                 <div>
-                  <img class="inline-block rounded-full" ngSrc="user.png" alt="default user profile" width="32" height="32">
-                  <span class="text-sm font-medium text-white inline-block mx-2 align-middle">{{ authenticationService.getUserById(localStorage.getItem('userId'))?.fullName }}</span>
+                  <img id="profile" class="inline-block rounded-full border-2 border-white" [src]="imageUrl" alt="default user profile">
+                  <span class="text-sm font-medium text-white inline-block mx-2 align-middle">{{ localStorage.getItem('userFullName') }}</span>
                 </div>
 
               </button>
             }
           </div>
-          @if (localStorage.getItem('userId') != null){
             <div [hidden]="hiddenUserMenu" class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black/5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
-              <a (click)="logout()" class="block px-4 py-2 text-sm text-black hover:bg-gray-100" role="menuitem" tabindex="-1" id="user-menu-item-2">Sign out</a>
+              <a (click)="logout()" class="block px-4 py-2 text-sm text-black hover:bg-gray-100 cursor-pointer" role="menuitem" tabindex="-1" id="user-menu-item-2">Sign out</a>
             </div>
-          }
         </div>
       </div>
     </div>
