--- a/frontend-web/news-app/src/app/core/home/home.component.html
+++ b/frontend-web/news-app/src/app/core/home/home.component.html
@@ -5,11 +5,11 @@
     <p class="mt-6 text-pretty text-lg font-medium text-gray-500 sm:text-xl/8">Full-stack application for managing and publishing internal news articles within an organization.</p>
     <div class="mt-10 flex items-center justify-center gap-x-6">
       <a [routerLink]="['/post']" class="rounded bg-pxlGreen px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-pxlGreenH">Go to posts</a>
-      @if (localStorage.getItem('userId') == null){
+      @if (userId$ == null){
         <a [routerLink]="['/login']"  class="text-sm font-semibold text-black hover:text-pxlGreen">
           Sign in
           <span aria-hidden="true">→</span></a>
-      } @else if (localStorage.getItem('userRole') === 'editor'){
+      } @else if (userRole$ === 'editor'){
         <a [routerLink]="['/myPost']"  class="text-sm font-semibold text-black hover:text-pxlGreen">
           Go to my posts
           <span aria-hidden="true">→</span></a>
