--- a/frontend-web/news-app/src/app/core/login/login.component.html
+++ b/frontend-web/news-app/src/app/core/login/login.component.html
@@ -25,10 +25,10 @@
       <button type="submit" class="flex w-full justify-center bg-pxlGreen hover:bg-pxlGreenH text-white font-bold py-2 px-4 mb-2 rounded">
         Sign in
       </button>
-      @if (validLogin){
+      @if (invalidLogin){
         <div class="text-red-500 text-sm mt-1">Username and/or password is incorrect</div>
       }
-      @if (validLoginForm){
+      @if (invalidLoginForm){
         <div class="text-red-500 text-sm mt-1">Username and password is required</div>
       }
     </form>
