--- a/frontend-web/news-app/src/app/core/posts/filter/filter.component.html
+++ b/frontend-web/news-app/src/app/core/posts/filter/filter.component.html
@@ -8,7 +8,9 @@
         }
         <input type="text" class="px-4 py-2 border-2 rounded shadow" placeholder="Search by category" name="category" [(ngModel)]="filter.category">
         <button type="submit" class="ml-2 bg-pxlGreen hover:bg-pxlGreenH text-white font-bold py-2 px-4 rounded">Search</button>
-        <button (click)="addPost()"  class="ml-2 bg-pxlGreen hover:bg-pxlGreenH text-white font-bold py-2 px-4 rounded">Add post</button>
+        @if(userRole$ == 'editor' && mine) {
+          <button (click)="addPost()"  class="ml-2 bg-pxlGreen hover:bg-pxlGreenH text-white font-bold py-2 px-4 rounded">Add post</button>
+        }
       </div>
     </form>
   </div>
